# Re-Chip8

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
chip8/: CMakeLists.txt
chip8/include/chip8/: chip8.hpp  defines.h  defines.hpp  input_handler.hpp  renderer.hpp  sound.hpp  timer.hpp  types.hpp
chip8/src/: chip8.cpp  input_handler.cpp  renderer.cpp  sound.cpp
gui/include/gui/: debugger.hpp  gui_utils.hpp
gui/src/: debugger.cpp
include/: config.hpp
